<resources>
    <string name="app_name">KeyDays</string>
    <string name="app_subtitle">Record your life.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">happygirlzt</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_past_days">Past Days</string>
    <string name="nav_upcoming">Upcoming</string>
    <string name="nav_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="nav_profile">Profile</string>

    <string name="text_login">Log in</string>
    <string name="text_register">Register</string>
    <string name="error_message_email">Enter Valid Email</string>

    <string name="correct_toast">You are logged in!</string>
    <string name="incorrect_toast">Wrong Email or Password</string>

    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>

    <string name="error_email_exists">Email Already Exists</string>
    <string name="text_hello">Hello, Mai</string>
    <string name="text_title">Android Tutorials Hub</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- 这里是MainActivity那里的 -->
    <string name="contentDescription">The cover of main event</string>

    <!-- Add date activity -->
    <string name="select_date">Select Date</string>
    <string name="date_title">Title</string>
    <string name="back">Back</string>
    <string name="add">Add</string>

    <!-- Date details -->
    <string name="date_details">Date details</string>
    <string name="register">Register</string>
    <string name="date_picker">Date of KeyDate</string>
    <string name="picked_date">Picked Date</string>
</resources>
