<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_past_days"
            android:icon="@drawable/ic_past_days"
            android:title="@string/nav_past_days" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_upcoming"
            android:title="@string/nav_upcoming" />
    </group>

    <item android:title="@string/nav_profile">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_logout" />

        </menu>
    </item>

</menu>
