<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.AddDateActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="80dp"
            android:padding="16dp"
            android:background="@drawable/leslie">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/date_title"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:textSize="30sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:gravity="center"
                android:text="@string/prompt_password"
                android:textColor="@color/colorText"
                android:textSize="50sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorText"
                android:text="@string/hello_blank_fragment"
                android:textSize="30sp"/>
        </LinearLayout>


    </android.support.v7.widget.CardView>
</RelativeLayout>